# terminald

./: .gitignore  AGENTS.md  AGETNS.md  Cargo.toml  LICENSE  PRODUCT.md  README.md  flake.nix
.github/workflows/: build.yml  test.yml
crates/terminald-cli/: Cargo.toml
crates/terminald-cli/src/: args.rs  client.rs  main.rs  server.rs  terminal.rs
crates/terminald-cli/tests/: dependency_features.rs
crates/terminald-protocol/: Cargo.toml
crates/terminald-protocol/src/: lib.rs  message.rs  resize.rs
crates/terminald-pty/: Cargo.toml
crates/terminald-pty/src/: lib.rs  process.rs
crates/terminald-pty/src/process/: tests.rs
crates/terminald-server/: Cargo.toml
crates/terminald-server/assets/: index.html
crates/terminald-server/assets/assets/: terminald.css  terminald.js
crates/terminald-server/src/: assets.rs  auth.rs  lib.rs  routes.rs  server.rs  session.rs
crates/terminald-server/src/routes/: tests.rs
crates/terminald-server/src/routes/tests/: websocket_tests.rs
docs/superpowers/plans/: 2026-06-04-terminald-implementation.md  2026-06-05-websocket-reconnect-rust-embed.md  2026-06-29-diagnostic-terminal-shell.md  2026-06-29-structural-reliability-optimizations.md  2026-07-01-server-bind-host.md
docs/superpowers/specs/: 2026-06-04-terminald-design.md  2026-06-05-websocket-reconnect-rust-embed-design.md  2026-06-29-diagnostic-terminal-shell-design.md  2026-06-29-structural-reliability-optimizations-design.md  2026-07-01-server-bind-host-design.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.connection.test.tsx  App.test.tsx  App.tsx  styles.css  styles.test.ts
frontend/src/terminal/: ConnectionStatusBar.test.tsx  ConnectionStatusBar.tsx  GhosttyTerminal.test.tsx  GhosttyTerminal.tsx  connectionState.test.ts  connectionState.ts  protocol.test.ts  protocol.ts  urls.test.ts  urls.ts
