[workspace]
members = [
    "crates/terminald-cli",
    "crates/terminald-protocol",
    "crates/terminald-pty",
    "crates/terminald-server",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.0.4"

[workspace.dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = { version = "0.8.7", features = ["ws"] }
base64 = "0.22.1"
bytes = "1.11.0"
clap = { version = "4.5.53", features = ["derive"] }
crossterm = "0.29.0"
futures-util = "0.3.31"
http = "1.4.0"
http-body-util = "0.1.3"
libc = "0.2.186"
nix = { version = "0.30.1", features = ["fs", "ioctl", "process", "signal", "term"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
rust-embed = "8.11.0"
rustls = { version = "0.23.40", default-features = false }
tempfile = "3.23.0"
tokio = { version = "1.48.0", features = ["fs", "io-std", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-tungstenite = "0.28.0"
tower = "0.5.2"
tower-http = { version = "0.6.7", features = ["fs"] }
url = "2.5.7"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
